--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
+    "react-select": "^5.6.1",
     "tauri-settings": "^0.1.2"
   },
   "devDependencies": {
