--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ chrono = "*"
 dotenv_codegen = "*"
 enigo = { path = "./enigo", version = "0.0.14"}
 log = "^0.4"
+phf = "0.11.1"
 
 [dependencies.tauri-plugin-log]
 git = "https://github.com/tauri-apps/tauri-plugin-log"
