a8a95aff6d08e066159d1c6ed36a41ed72ecdcc5

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ dotenv_codegen = "*"
 enigo = { path = "./enigo", version = "0.0.14"}
 log = "^0.4"
 phf = "0.11.1"
+cpal = "*"
 
 [dependencies.tauri-plugin-log]
 git = "https://github.com/tauri-apps/tauri-plugin-log"
