--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ enigo = { path = "./enigo", version = "0.0.14"}
 log = "^0.4"
 phf = "0.11.1"
 cpal = "*"
+auto-launch = "0.4.0"
 
 [dependencies.tauri-plugin-log]
 git = "https://github.com/tauri-apps/tauri-plugin-log"
